# Cmake

./: CMakeLists.txt
src/: mymath.c  test.c
